--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -49,7 +49,6 @@ background-color: rgba(255, 255, 255, 0.2);
 }
 
 .post-list {
-    margin-top:50px;
     list-style:none;
     padding: 0;
 }
@@ -91,9 +90,6 @@ border-bottom: 1px solid #efefef;
 
     color: #ED5C5C;
   }
-
-
-  
   
   .dropdown-content {
     display: none;
@@ -118,3 +114,57 @@ border-bottom: 1px solid #efefef;
     display: block;
   }
   
+  li {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .title-duration {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .tags {
+    margin-top: 5px;
+  }
+
+  .tag {
+    margin-right: 7px;
+    border: 2px solid #adadad;
+    border-radius: 20px;
+    cursor: pointer;
+    padding:4px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-size: 13px;
+    color:#6f6f6f;
+
+  }
+  
+  .duration {
+    margin-right: 10px;
+    font-weight: bold;
+    font-size:14px;
+  }
+  
+.modal-button {
+  padding-top: 4px;
+   border: 3px solid #f48282;
+   border-radius: 20px;
+    cursor: pointer;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white;
+    
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    /* identical to box height, or 105% */
+
+    text-align: center;
+    letter-spacing: -0.408px;
+
+    color: #ED5C5C;
+}
