--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -67,29 +67,8 @@ border-bottom: 1px solid #efefef;
   
     .dropdown {
         position: relative;
-        margin-right: 10px;
     }
   
-  .dropdown-btn {
-   padding-top: 4px;
-   border: 3px solid #f48282;
-   border-radius: 20px;
-    cursor: pointer;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: white;
-    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
-    /* identical to box height, or 105% */
-
-    text-align: center;
-    letter-spacing: -0.408px;
-
-    color: #ED5C5C;
-  }
   
   .dropdown-content {
     display: none;
@@ -148,7 +127,7 @@ border-bottom: 1px solid #efefef;
     font-size:14px;
   }
   
-.modal-button {
+.button {
   padding-top: 4px;
    border: 3px solid #f48282;
    border-radius: 20px;
@@ -156,6 +135,7 @@ border-bottom: 1px solid #efefef;
     padding-left: 10px;
     padding-right: 10px;
     background-color: white;
+    margin-right: 10px;
     
     font-style: normal;
     font-weight: 400;
@@ -167,4 +147,9 @@ border-bottom: 1px solid #efefef;
     letter-spacing: -0.408px;
 
     color: #ED5C5C;
+}
+
+.not-selected {
+  border: 3px solid #6f6f6f;
+  color:#6f6f6f;;
 }
