--- a/src/styles/Write.module.css
+++ b/src/styles/Write.module.css
@@ -1,25 +1,118 @@
 .writeContainer {
-    display: flex;
-    padding-left: 20%;
-    padding-right: 20%;
-    height: 100vh;
-    height: 100vh;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 180px;
+  
 }
 
-.writeContainer h1 {
-    margin-left: 30px;
+.formContainer {
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  align-items: center;
 }
+
+
+.fixedHeader {
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    width: 100%;
+    padding: 10px;
+    z-index: 1;
+}
+
+.fixedHeader h1 {
+    margin-left: 200px;
+}
+
+
 
 .postContainer {
-
-    width: 55%;
-    height: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
+    width: 100%;
+    padding:20px;
     background: #F7F7F7;
     border-radius: 15px;
+    margin-bottom: 50px;
+
+}
+
+.exContainer {
+    width: 100%;
+    padding:20px;
+    border-radius: 15px;
+    margin-bottom: 50px;
+}
+
+
+.titleContainer {
+    display: flex;
+    justify-content: space-between;
+
+}
+.title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 20px;
+    padding: 10px;
+    padding-bottom: 20px;
+}
+
+.deleteButton {
+    
+    height: 25px;
+    margin-right: 7px;
+    border: 2px solid #adadad;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 13px;
+    color: #6f6f6f;
+}
+
+.exContainer textarea {
+    width: 100%;
+    padding: 20px;
+    padding-bottom: 200px;
+    background: #F7F7F7;
+    border-radius: 15px;
+    border-color: #F7F7F7;
+    
+}
+
+
+.add {
+    width: 100%;
+    padding:10px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.addButton {
+    height: 25px;
+    margin-right: 7px;
+    border: 2px solid #adadad;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-left: 10px;
+    font-size: 20px;
+    color: #000000;
+}
+
+.writeButton {
+    width: 80%;
+    padding: 20px;
+    color:white;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 500px;
+    background: #A774C7;
+    border-radius: 15px;
+    border-color: #A774C7;
 }
