--- a/src/styles/Write.module.css
+++ b/src/styles/Write.module.css
@@ -8,7 +8,7 @@
 
 .formContainer {
   display: flex;
-  width: 60%;
+  width: 65%;
   flex-direction: column;
   align-items: center;
 }
@@ -31,16 +31,118 @@
 
 .postContainer {
     width: 100%;
-    padding:20px;
     background: #F7F7F7;
     border-radius: 15px;
     margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
 
 }
 
+.postForm {
+    padding: 20px;
+}
+
+.column {
+    padding-top:20px;
+    display: grid;
+    grid-template-columns: 2fr 8fr; /* 두 개의 컬럼으로 그리드 설정 */
+    grid-gap: 5px; /* 그리드 아이템 사이의 간격 설정 */
+    margin-top: 20px;
+    padding-left: 30px;
+}
+
+.label {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.duration {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.date {
+    display: flex;
+}
+
+.date img {
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+.duration input {
+    background: transparent; /* 투명 배경 설정 */
+    border: none; /* 테두리 제거 */
+    outline: none;
+
+    font-family: 'Inter'; /*폰트 설정*/
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+
+    padding-bottom: 10px;
+
+}
+
+.inputText {
+    background: transparent; /* 투명 배경 설정 */
+    border: none; /* 테두리 제거 */
+    outline: none;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.tagContainer {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 8px;
+  }
+  
+  .tagItem {
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    padding: 4px 8px;
+
+    border: 2px solid #303030;
+    border-radius: 20px;
+    cursor: pointer;
+    color: #303030;
+
+  }
+  
+  .tag {
+    margin-right: 4px;
+    font-size: 15px;
+  }
+  
+  .removeButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+    background-color: transparent;
+    color: #718096;
+    font-size: 12px;
+    cursor: pointer;
+  }
+
+
 .exContainer {
     width: 100%;
-    padding:20px;
     border-radius: 15px;
     margin-bottom: 50px;
 }
@@ -49,20 +151,44 @@
 .titleContainer {
     display: flex;
     justify-content: space-between;
-
-}
-.title {
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 20px;
     padding: 10px;
     padding-bottom: 20px;
 }
 
-.deleteButton {
+
+.titleCharacterContainer {
+    display: flex;
+    flex-grow: 1;
+}
+
+.inputTitle{
+    width:80%;
     
+    background: #F7F7F7;
+    outline: none;
+    border-radius: 15px;
+    border-color: #F7F7F7;
+    font-weight:600;
+    font-size: 20px;
+    line-height: 18px;
+}
+
+.title {
+    font-weight:bold;
+    font-size: 20px;
+}
+
+.characterCount {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    padding-left:10px;
+
+}
+
+.deleteButton {
     height: 25px;
-    margin-right: 7px;
     border: 2px solid #adadad;
     border-radius: 20px;
     cursor: pointer;
@@ -71,16 +197,22 @@
     padding-right: 20px;
     font-size: 13px;
     color: #6f6f6f;
+    justify-content: flex-end;
 }
 
 .exContainer textarea {
+    box-sizing: border-box; /* 박스 모델 변경 */
     width: 100%;
     padding: 20px;
     padding-bottom: 200px;
     background: #F7F7F7;
     border-radius: 15px;
     border-color: #F7F7F7;
-    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 
@@ -116,3 +248,19 @@
     border-radius: 15px;
     border-color: #A774C7;
 }
+
+.fileList {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 20px;
+  }
+  
+  .fileItem {
+    background-color: #f7f7f7;
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+  }
+  
