--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,116 +1,130 @@
-
-
-.container {
-  padding-left: 20%;
-  padding-right: 20%;
-  height: 100vh;
+/*고정 헤더*/
+.fixedHeader {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  width: 100%;
+  padding: 10px;
+  z-index: 1; /*최상단 위치 */
+}
+.fixedHeader h1 {
+  margin-left: 20%;
 }
 
-.container h1 {
-  font-weight: bold;
-  padding: 20px;
+/*헤더 제외 전체를 포함하는 conatiner*/
+.container {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 200px;
+}
+
+.postListContainer {
+  display: flex;
+  width: 65%;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
 }
 
 .postList {
-  list-style: none;
-  padding: 0;
+    width: 100%;
+    list-style: none;
+    padding: 0;
 }
 
 .postListli {
-  margin-bottom: 10px;
-  padding: 20px;
-  border-bottom: 1px solid #efefef;
+    padding: 10px;
+    border-bottom: 1px solid #efefef;
+    padding-bottom: 20px;
 }
 
 .buttonContainer {
-  padding-top: 50px;
-  padding-left: 20px;
-  display: flex;
+    margin-top: 70px;
+    margin-left:18%;
+    display: flex;
 }
 
 .dropdown {
-  position: relative;
+    position: relative;
 }
 
 .dropdownContent {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdownContent button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  text-align: left;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+    display: block;
+    width: 100%;
+    padding: 10px;
+    text-align: left;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown:hover .dropdownContent {
-  display: block;
+    display: block;
 }
 
-li {
-  display: flex;
-  flex-direction: column;
-}
 
+/*title과 duration을 포함하는 container*/
 .titleDuration {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .tags {
-  margin-top: 5px;
+    margin-top: 5px;
 }
 
 .tag {
-  margin-right: 7px;
-  border: 2px solid #adadad;
-  border-radius: 20px;
-  cursor: pointer;
-  padding: 4px;
-  padding-left: 6px;
-  padding-right: 6px;
-  font-size: 13px;
-  color: #6f6f6f;
+    margin-right: 7px;
+    border: 2px solid #adadad;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 4px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-size: 13px;
+    color: #6f6f6f;
 }
 
 .duration {
-  margin-right: 10px;
-  font-weight: bold;
-  font-size: 14px;
+    margin-right: 10px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .button {
-  padding-top: 4px;
-  border: 3px solid #f48282;
-  border-radius: 20px;
-  cursor: pointer;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: white;
-  margin-right: 10px;
+    padding-top: 4px;
+    border: 3px solid #f48282;
+    border-radius: 20px;
+    cursor: pointer;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white;
+    margin-right: 10px;
 
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 30px;
-  /* identical to box height, or 105% */
 
-  text-align: center;
-  letter-spacing: -0.408px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    /* identical to box height, or 105% */
 
-  color: #ed5c5c;
+    text-align: center;
+    letter-spacing: -0.408px;
+
+    color: #ed5c5c;
 }
 
 .notSelected {
-  border: 3px solid #6f6f6f;
-  color: #6f6f6f;
+    border: 3px solid #6f6f6f;
+    color: #6f6f6f;
 }
