--- a/src/styles/Write.module.css
+++ b/src/styles/Write.module.css
@@ -1,51 +1,51 @@
-.writeContainer {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  margin-top: 180px;
-  
-}
-
-.formContainer {
-  display: flex;
-  width: 65%;
-  flex-direction: column;
-  align-items: center;
-}
-
-
+/*고정 헤더*/
 .fixedHeader {
     position: fixed;
     top: 0;
     background-color: #fff;
     width: 100%;
     padding: 10px;
-    z-index: 1;
+    z-index: 1; /*최상단 위치 */
 }
 
 .fixedHeader h1 {
-    margin-left: 200px;
+    margin-left: 20%;
 }
 
-
-
-.postContainer {
-    width: 100%;
-    background: #F7F7F7;
-    border-radius: 15px;
-    margin-bottom: 50px;
+/*헤더 제외 전체를 포함하는 conatiner*/
+.writeContainer {
     display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 180px;
+}
+
+.formContainer {
+    display: flex;
+    width: 65%;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*postForm을 포함하는 Conatiner*/
+.postContainer {
+    display: flex;
+    width: 100%;
     flex-direction: column;
 
+    background: #f7f7f7;
+    border-radius: 15px;
+    margin-bottom: 50px;
 }
 
 .postForm {
     padding: 20px;
 }
 
+/*postForm안의 요소들 column 배치 설정*/
 .column {
-    padding-top:20px;
-    display: grid;
+    padding-top: 20px;
+    display: grid; /*그리드 형태로 label부분과 input 부분 분리*/
     grid-template-columns: 2fr 8fr; /* 두 개의 컬럼으로 그리드 설정 */
     grid-gap: 5px; /* 그리드 아이템 사이의 간격 설정 */
     margin-top: 20px;
@@ -60,21 +60,13 @@
     line-height: 22px;
 }
 
+/*진행기간에서 startDate와 endDate는 column으로 배치*/
 .duration {
     display: flex;
     flex-direction: column;
     width: 40%;
 }
 
-.date {
-    display: flex;
-}
-
-.date img {
-    width: 20px;
-    height: 20px;
-    margin-right: 20px;
-}
 .duration input {
     background: transparent; /* 투명 배경 설정 */
     border: none; /* 테두리 제거 */
@@ -87,13 +79,22 @@
     line-height: 22px;
 
     padding-bottom: 10px;
+}
 
+.date {
+    display: flex;
+}
+
+.date img {
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
 }
 
 .inputText {
     background: transparent; /* 투명 배경 설정 */
     border: none; /* 테두리 제거 */
-    outline: none;
+    outline: none; /*포커스 시 outline 제거*/
 
     font-family: 'Inter';
     font-style: normal;
@@ -106,9 +107,9 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 8px;
-  }
-  
-  .tagItem {
+}
+
+.tagItem {
     display: flex;
     align-items: center;
     margin-right: 8px;
@@ -119,15 +120,14 @@
     border-radius: 20px;
     cursor: pointer;
     color: #303030;
+}
 
-  }
-  
-  .tag {
+.tag {
     margin-right: 4px;
     font-size: 15px;
-  }
-  
-  .removeButton {
+}
+
+.removeButton {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -138,16 +138,16 @@
     color: #718096;
     font-size: 12px;
     cursor: pointer;
-  }
+}
 
-
+/*경험 기록 내용의 title과 text를 감싸는 Container*/
 .exContainer {
     width: 100%;
     border-radius: 15px;
     margin-bottom: 50px;
 }
 
-
+/*title, 글자수, 삭제 버튼을 담고있는 COntainer*/
 .titleContainer {
     display: flex;
     justify-content: space-between;
@@ -155,26 +155,25 @@
     padding-bottom: 20px;
 }
 
-
+/*title, 글자수만 담고있는 Container*/
 .titleCharacterContainer {
-    display: flex;
     flex-grow: 1;
+    display: flex;
 }
 
-.inputTitle{
-    width:80%;
-    
-    background: #F7F7F7;
-    outline: none;
+/*title을 입력해야 할 시 input창 css*/
+.titleCharacterContainer input {
+    width: 80%;
+    background: #f7f7f7;
     border-radius: 15px;
-    border-color: #F7F7F7;
-    font-weight:600;
+    outline: none;
+    border: none;
+    font-weight: 600;
     font-size: 20px;
-    line-height: 18px;
 }
 
 .title {
-    font-weight:bold;
+    font-weight: bold;
     font-size: 20px;
 }
 
@@ -183,21 +182,22 @@
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
-    padding-left:10px;
-
+    padding-left: 10px;
 }
 
 .deleteButton {
     height: 25px;
-    border: 2px solid #adadad;
-    border-radius: 20px;
-    cursor: pointer;
     margin-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
+    justify-content: flex-end; /*오른쪽 끝에 위치*/
+
+    border: 2px solid #adadad;
+    border-radius: 20px;
+
+    cursor: pointer;
     font-size: 13px;
     color: #6f6f6f;
-    justify-content: flex-end;
 }
 
 .exContainer textarea {
@@ -205,24 +205,21 @@
     width: 100%;
     padding: 20px;
     padding-bottom: 200px;
-    background: #F7F7F7;
+    background: #f7f7f7;
     border-radius: 15px;
-    border-color: #F7F7F7;
-    font-family: 'Inter';
-    font-style: normal;
+    border-color: #f7f7f7;
+
     font-weight: 400;
     font-size: 16px;
-    line-height: 22px;
 }
 
-
+/*내용 or 파일 추가하기*/
 .add {
     width: 100%;
-    padding:10px;
+    padding: 10px;
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 20px;
-    line-height: 22px;
 }
 
 .addButton {
@@ -231,36 +228,45 @@
     border: 2px solid #adadad;
     border-radius: 20px;
     cursor: pointer;
+
     margin-left: 10px;
     font-size: 20px;
-    color: #000000;
 }
 
-.writeButton {
-    width: 80%;
-    padding: 20px;
-    color:white;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 20px;
-    margin-bottom: 500px;
-    background: #A774C7;
-    border-radius: 15px;
-    border-color: #A774C7;
-}
-
+/*첨부한 파일 list*/
 .fileList {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-bottom: 20px;
-  }
-  
-  .fileItem {
-    background-color: #f7f7f7;
+}
+
+.fileItem {
+    width: 100%;
     padding: 10px;
     margin-bottom: 5px;
+    background-color: #f7f7f7;
     border-radius: 5px;
-  }
-  
+}
+
+/*글쓰기 버튼*/
+.writeButton {
+    width: 80%;
+    padding: 10px;
+    margin-top: 20px;
+    background: #a774c7;
+    border-radius: 15px;
+    border-color: #a774c7;
+    cursor: pointer;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+
+/*임시 Footer..*/
+.last {
+    margin-top: 100px;
+    color:white;
+}
