--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,30 +1,31 @@
 /*고정 헤더*/
 .fixedHeader {
-  position: fixed;
-  top: 0;
-  background-color: #fff;
-  width: 100%;
-  padding: 10px;
-  z-index: 1; /*최상단 위치 */
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    width: 100%;
+    padding: 10px;
+    z-index: 1; /*최상단 위치 */
 }
 .fixedHeader h1 {
-  margin-left: 20%;
+    margin-left: 20%;
 }
 
 /*헤더 제외 전체를 포함하는 conatiner*/
 .container {
-  display: flex;
-  justify-content: center;
-  height: 100vh;
-  margin-top: 200px;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 200px;
 }
 
 .postListContainer {
-  display: flex;
-  width: 65%;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
+    display: flex;
+    width: 65%;
+    flex-direction: column;
+    align-items: center;
+
+    margin-top: 50px;
 }
 
 .postList {
@@ -41,7 +42,7 @@
 
 .buttonContainer {
     margin-top: 70px;
-    margin-left:18%;
+    margin-left: 18%;
     display: flex;
 }
 
@@ -71,7 +72,6 @@
 .dropdown:hover .dropdownContent {
     display: block;
 }
-
 
 /*title과 duration을 포함하는 container*/
 .titleDuration {
@@ -112,7 +112,6 @@
     background-color: white;
     margin-right: 10px;
 
-
     font-weight: 400;
     font-size: 18px;
     line-height: 30px;
@@ -127,4 +126,9 @@
 .notSelected {
     border: 3px solid #6f6f6f;
     color: #6f6f6f;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
