--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,11 +1,11 @@
 .modalBox {
-    position:fixed;
-    top:0;
-    left:0;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0,0,0,0.3);
-    z-index:100;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 100;
 }
 
 .container {
@@ -17,32 +17,31 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
- 
+
     background-color: white;
     border-radius: 8px;
-  }
-  
-  /* 모달창 내부 X버튼 */
-  .close {
+}
+
+/* 모달창 내부 X버튼 */
+.close {
     position: absolute;
     right: 30px;
     top: 30px;
     width: 56px;
     height: 31px;
-    background: #F0F0F0;
+    background: #f0f0f0;
     border: 1px solid #545454;
     border-radius: 15px;
-  }
-   
- 
-  .tagBox {
+}
+
+.tagBox {
     display: flex;
     flex-direction: column;
     padding-top: 50px;
     padding-left: 100px;
-  }
+}
 
-  .tag {
+.tag {
     margin-right: 7px;
     border: 3px solid #adadad;
     border-radius: 20px;
@@ -51,11 +50,123 @@
     padding-left: 6px;
     padding-right: 6px;
     font-size: 18px;
-    color:#6f6f6f;
+    color: #6f6f6f;
     background-color: white;
-  }
+}
 
-  .selected {
-    border-color:#ED5C5C;
-    color: #ED5C5C;
-  }
+.selected {
+    border-color: #ed5c5c;
+    color: #ed5c5c;
+}
+
+/*postForm을 포함하는 Conatiner*/
+.postContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+
+    border-radius: 15px;
+    margin-bottom: 50px;
+}
+
+.postForm {
+    padding: 20px;
+}
+
+/*postForm안의 요소들 column 배치 설정*/
+.column {
+    padding-top: 20px;
+    display: grid; /*그리드 형태로 label부분과 input 부분 분리*/
+    grid-template-columns: 2fr 8fr; /* 두 개의 컬럼으로 그리드 설정 */
+    grid-gap: 5px; /* 그리드 아이템 사이의 간격 설정 */
+    margin-top: 20px;
+    padding-left: 30px;
+}
+
+.label {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+}
+
+/*진행기간에서 startDate와 endDate는 column으로 배치*/
+.duration {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.duration input {
+    background: transparent; /* 투명 배경 설정 */
+    border: none; /* 테두리 제거 */
+    outline: none;
+
+    font-family: 'Inter'; /*폰트 설정*/
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+
+    padding-bottom: 10px;
+}
+
+.date {
+    display: flex;
+}
+
+.date img {
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+
+.inputText {
+    background: transparent; /* 투명 배경 설정 */
+    border: none; /* 테두리 제거 */
+    outline: none; /*포커스 시 outline 제거*/
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.tagContainer {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 8px;
+}
+
+.tagItem {
+    display: flex;
+    align-items: center;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    padding: 4px 8px;
+
+    border: 2px solid #303030;
+    border-radius: 20px;
+    cursor: pointer;
+    color: #303030;
+}
+
+.tag {
+    margin-right: 4px;
+    font-size: 15px;
+}
+
+.removeButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+    background-color: transparent;
+    color: #718096;
+    font-size: 12px;
+    cursor: pointer;
+}
