--- a/src/styles/Detail.module.css
+++ b/src/styles/Detail.module.css
@@ -139,6 +139,11 @@
     white-space: nowrap;
 }
 
+.buttonContainer {
+    justify-content: flex-end; /*오른쪽 끝에 위치*/
+    display: flex;
+
+}
 .updateButton {
     display: flex;
     align-items: center;
@@ -146,7 +151,6 @@
     margin-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    justify-content: flex-end; /*오른쪽 끝에 위치*/
 
     border: 1px solid #545454;
     border-radius: 15px;
@@ -154,10 +158,28 @@
     cursor: pointer;
     font-size: 13px;
 
-    margin-left: 10%;
+    margin-left: 10px;
+    white-space: nowrap;
+}
+.deleteButton {
+    display: flex;
+    align-items: center;
+    height: 25px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    border: 1px solid #ff8eae;
+    border-radius: 15px;
+    background-color: #fff;
+    cursor: pointer;
+    font-size: 13px;
     white-space: nowrap;
 }
 
+.deleteButton:hover {
+    background-color: #ff8eae;
+}
 .textContainer {
     box-sizing: border-box;
 
@@ -186,3 +208,23 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+.add {
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.addButton {
+    height: 25px;
+    margin-right: 7px;
+    border: 2px solid #adadad;
+    border-radius: 20px;
+    cursor: pointer;
+
+    margin-left: 10px;
+    font-size: 20px;
+}
+
