--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -53,20 +53,30 @@
 .dropdownContent {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    min-width: 80px;
     z-index: 1;
-}
+    padding: 8px;
+  }
 
-.dropdownContent button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    text-align: left;
+  .dropdownContent button {
     background-color: transparent;
     border: none;
+    color: #333;
+    padding: 4px 8px;
+    display: block;
+    width: 100%;
+    text-align: left;
+    font-size: 14px;
     cursor: pointer;
+  }
+
+/* 버튼을 눌렀을 때의 스타일 */
+.dropdownContent button:active {
+  background-color: #ccc;
 }
 
 .dropdown:hover .dropdownContent {
